fix image alignment

--- a/style.css
+++ b/style.css
@@ -243,7 +243,7 @@ main .section-container .name #mitchell{
   width: 27rem;
   position: relative;
   top: -37.8rem;
-  right: 7.23rem;
+  right: 6.35rem;
   z-index: 2;
 }
 #green-shape {
